# freds-final-

./: DESIGN_SYSTEM.md  METRICS.md  PERSISTENCE.md  RESOURCES.md  RUBRIC.md  TESTING.md  next.config.mjs  package.json  tsconfig.json  vercel.json
__tests__/: encryption.test.ts  vault.test.ts
app/: layout.tsx
app/action-inbox/: page.tsx
app/api/career/review/: route.ts
app/api/embeddings/: route.ts
app/api/simulate-decision/: route.ts
app/api/speech-to-text/: route.ts
app/career/oauth-success/: page.tsx
app/demo/: page.tsx
app/financial-studio/: page.tsx
app/living-demo/: page.tsx
chrome-extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
crewai-backend/: README.md  pyproject.toml  start_server.py
crewai-backend/src/apex_ai_hierarchical_life_companion/: crew.py  main.py  scheduler.py
crewai-backend/src/apex_ai_hierarchical_life_companion/api/: server.py
crewai-backend/src/apex_ai_hierarchical_life_companion/config/: agents.yaml  tasks.yaml
crewai-backend/src/apex_ai_hierarchical_life_companion/tools/: aura_tool.py  booking_tool.py  calendar_tool.py  email_tool.py  linkedin_tool.py  maps_tool.py  memory_tool.py  notion_tool.py  project_management_tool.py  ride_share_tool.py  simulation_tool.py  skyscanner_tool.py  viator_tool.py
cypress/e2e/: onboarding-to-insights.cy.ts
cypress/support/: e2e.ts
docs/: DEPLOYMENT_GUIDE.md  DESIGN_SYSTEM.md  EDGE_CASES.md  FEATURE_VALIDATION.md  TEST_PLAN.md  VOICE_PERSONALITY.md
hooks/: use-async.tsx
